--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -1,16 +1,21 @@
-name: Greetings
-
-on: [pull_request_target, issues]
-
+name: My workflow
+on: [push]
+# grouping jobs
 jobs:
-  greeting:
+# job to run cypress
+ cypress-run:
     runs-on: ubuntu-latest
-    permissions:
-      issues: write
-      pull-requests: write
-    steps:
-    - uses: actions/first-interaction@v1
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        issue-message: 'Welcome'
-        pr-message: 'Your first pr kudos!'
+    steps: 
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install node
+        uses: actions/setup-node@v2
+        with:
+            node:version: '14'
+      - name: Install dependencies
+        run: npm run test:all
+      - name: Cypress run
+        uses: cypress-io/github-action@v2
+        with:
+            start: npm run test:all
+           
