working on  workflow

--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -17,5 +17,5 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
-            start: npm run test:all
+            start: npm run run
            
